# twined-gcp

./: .gitignore  .pre-commit-config.yaml  ATTRIBUTIONS.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql.yml  gcloud-deploy.yml  release.yml  semantic.yml  tests.yml  update-pull-request.yml
functions/event_handler/: main.py  requirements.txt
functions/service_registry/: main.py  requirements.txt
gcloud/functions/event_handler/: main.py  requirements.txt
gcloud/functions/helper/: main.py  requirements.txt
terraform/: iam.tf  main.tf  storage.tf  variables.tf
tests/: mocks.py  test_event_handler.py  test_service_registry.py
